[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Danny-progg <122675148+Danny-progg@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
hh = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
